Dark Mode and Addition of Friedly messages

--- a/public/index.html
+++ b/public/index.html
@@ -16,18 +16,37 @@
           </div>
           <div class="lado-direito">
             <a href="pages/weather.html">Weather Search</a>
+            <img id="sun" class="sun" src="../assets/sun.svg" />
+            <img id="moon" class="sun" src="../assets/moon.svg" />
           </div>
         </div>
       </div>
     </header>
     <main>
       <section>
-        <div class="firstpic"></div>
+        <div class="container">
+          <div class="tabela-content shadow">
+            <h1>Easiest Way to Access your weather information</h1>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni,
+              amet nisi omnis reprehenderit rerum temporibus aut rem quidem
+              totam eum deleniti assumenda quisquam possimus, ab distinctio
+              voluptatem aliquid necessitatibus cum!
+            </p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="firstpic shadow"></div>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem odio
           ducimus, iure corrupti quo rerum, perferendis alias itaque doloribus
           nisi provident culpa dicta, numquam voluptatum excepturi beatae
-          laboriosam minima nostrum.
+          laboriosam minima nostrum.<br />
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
+          iusto, neque reprehenderit fugiat saepe molestiae quo enim similique
+          quibusdam veniam aspernatur corporis officiis ea ullam quis sequi,
+          voluptatem in nesciunt!
         </p>
       </section>
       <section>
@@ -35,22 +54,31 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab fugiat
           modi unde quia! Mollitia ullam repellendus error sed perspiciatis
           libero, saepe repellat, ipsam tempora incidunt ea nostrum animi. Amet,
-          nesciunt.
+          nesciunt.<br />
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
+          iusto, neque reprehenderit fugiat saepe molestiae quo enim similique
+          quibusdam veniam aspernatur corporis officiis ea ullam quis sequi,
+          voluptatem in nesciunt!
         </p>
-        <div class="secondpic"></div>
+        <div class="secondpic shadow"></div>
       </section>
       <section>
-        <div class="thirdpic"></div>
+        <div class="thirdpic shadow"></div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
           vero laborum esse! Doloribus maxime cupiditate quisquam ea
           reprehenderit in maiores qui, libero, tempore eveniet quam dignissimos
-          saepe earum nesciunt expedita?
+          saepe earum nesciunt expedita?<br />
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
+          iusto, neque reprehenderit fugiat saepe molestiae quo enim similique
+          quibusdam veniam aspernatur corporis officiis ea ullam quis sequi,
+          voluptatem in nesciunt!
         </p>
       </section>
     </main>
     <footer>
       <p>Earth Weather - 2025</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
