--- a/public/pages/weather.html
+++ b/public/pages/weather.html
@@ -15,6 +15,8 @@
           </div>
           <div class="lado-direito">
             <a href="weather.html">Weather Search</a>
+            <img id="sun" class="sun" src="../assets/sun.svg" />
+            <img id="moon" class="sun" src="../assets/moon.svg" />
           </div>
         </div>
       </div>
